# file-organizer

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sample_config.yaml
files/: README.md  organizer.py
src/: organizer.py
tests/: test_organizer.py
