[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "file-organizer"
version = "1.1.0"
description = "A CLI tool that automatically sorts messy files into categorized folders"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["file", "organizer", "cli", "automation"]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0"]

[project.scripts]
organize = "src.organizer:main"

[tool.pytest.ini_options]
testpaths = ["tests"]